# editors

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  codecov.yml  mypy.ini  package.json  pyproject.toml  release.config.js  tox.ini
docs/: changelog.md
src/: dependencies_upgrade.py  stories_upgrade.py
tests/: test_configuration.py  test_dependencies_upgrade.py  test_stories_upgrade.py
tests/helpers/: pyproject.toml
