[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "A set of tools to automate clients code upgrade as much as possible."
authors = ["Artem Malyshev <proofit404@gmail.com>"]
license = "BSD-2-Clause"

packages = [
    { include = "stories_upgrade.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = { version = "*", optional = true }
tokenize-rt = { version = "*", optional = true }

[tool.poetry.extras]
stories = ["more-itertools", "tokenize-rt"]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
