[tool.poetry]
name = "editors"
version = "1.0.1"

description = "A set of tools to automate clients code upgrade as much as possible."
license = "BSD-2-Clause"

homepage = "https://dry-python.org/"
repository = "https://github.com/dry-python/editors/"

authors = [
    "Artem Malyshev <proofit404@gmail.com>",
]

packages = [
    { include = "stories_upgrade.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Click = { version = "*", optional = true }
more-itertools = { version = "*", optional = true }
tokenize-rt = { version = "*", optional = true }

[tool.poetry.extras]
stories = ["Click", "more-itertools", "tokenize-rt"]

[tool.poetry.scripts]
stories-upgrade = "stories_upgrade:main"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
